Secrets CURD operations are working with test cases
